2000-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Fix copy n' paste typos in
	`--with-*', `--without-*' and `*' decoding.
	Reported by Raja R Harinath.
	Fixes autoconf/119.

2000-03-08  Akim Demaille  <akim@epita.fr>

	Don't dump AC_ARG_PROGRAM help messages if not used.

	* acgeneral.m4 (_AC_INIT_HELP): Don't.
	(AC_ARG_PROGRAM): Do.

2000-03-08  Akim Demaille  <akim@epita.fr>

	Don't dump X help messages when `configure' does not check for X.

	* acgeneral.m4 (_AC_INIT_HELP): Don't dump X help messages.
	* acspecific.m4 (AC_PATH_X): Do it.

2000-03-08  Akim Demaille  <akim@epita.fr>

	No longer rely on /bin/sh to compose the optional parts of
	`configure --help'.

	* acgeneral.m4 (AC_DIVERSION_HELP_BEGIN, AC_DIVERSION_HELP_ENABLE,
	AC_DIVERSION_HELP_WITH, AC_DIVERSION_HELP_VAR,
	AC_DIVERSION_HELP_END): New diversion numbers.
	(AC_EXPAND_ONCE): New macro.
	(AC_PROVIDE_IF): New macro.
	(AC_BEFORE, AC_REQUIRE): Use it.
	(AC_REQUIRE): Don't use indir.
	(_AC_ARG_ENABLE_HELP_PROLOGUE, _AC_ARG_WITH_HELP_PROLOGUE,
	_AC_ARG_VAR_HELP_PROLOGUE): New macros.
	(AC_ARG_ENABLE, AC_ARG_WITH, AC_ARG_VAR): Expand once the
	_HELP_PROLOGUE macro which corresponds.
	(_AC_INIT_HELP): Adjust to AC_DIVERSION_HELP_BEGIN and
	AC_DIVERSION_HELP_END.
	(_AC_INIT_NOTICE, _AC_INIT_HELP): Remove the sh code which handled
	the optional help strings.

2000-03-08  Akim Demaille  <akim@epita.fr>

	AC_OUTPUT_COMMANDS no longer uses a diversion.

	* acgeneral.m4 (AC_DIVERSION_CMDS): Removed.
	(_AC_OUTPUT_CONFIG_STATUS): Don't undivert it.

2000-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Fix quoted/non quoted here
	document problems.

2000-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INIT_BINSH, AC_INIT_NOTICE, AC_INIT_PREPARE):
	Rename as...
	(_AC_INIT_BINSH, _AC_INIT_NOTICE, _AC_INIT_PREPARE): this.
	All callers adjusted.

2000-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INIT_PARSE_ARGS): Rename as...