@@ -1,5 +1,15 @@
 2000-03-08  Akim Demaille  <akim@epita.fr>
 
+	We don't need _AC_ARG_*_HELP_PROLOGUE.
+
+	* acgeneral.m4 (AC_EXPAND_ONCE): AC_PROVIDE yourself, in case
+	there is no AC_DEFUN associated with the text to expand.
+	(_AC_ARG_ENABLE_HELP_PROLOGUE, _AC_ARG_WITH_HELP_PROLOGUE,
+	_AC_ARG_VAR_HELP_PROLOGUE): Remove, instead...
+	(AC_ARG_ENABLE, AC_ARG_WITH, AC_ARG_VAR): do it yourself.
+
+2000-03-08  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Fix copy n' paste typos in
 	`--with-*', `--without-*' and `*' decoding.
 	Reported by Raja R Harinath.
